--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-Сначало объявляется два массива: изначальный и вторый такой же длины.
+1. Сначало объявляется два массива: изначальный и вторый такой же длины.
+2. Потом метод, в котором цикл соразмерный длине массива, внутри цикла
+проверка условия ( <=3 ), если да элемент первого массива заносится в count элемент второго массива.
