--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 1. Сначало объявляется два массива: изначальный и вторый такой же длины.
 2. Потом метод, в котором цикл соразмерный длине массива, внутри цикла
 проверка условия ( <=3 ), если да элемент первого массива заносится в count элемент второго массива.
+3. Переменная count чтобы поочередно закидывать из первого массива во второй и 
+чтобы потом не было пробелов. 
