--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 проверка условия ( <=3 ), если да элемент первого массива заносится в count элемент второго массива.
 3. Переменная count чтобы поочередно закидывать из первого массива во второй и 
 чтобы потом не было пробелов. 
+4. После присвоения увеличивается переменная count на 1 и возвращается к 
+циклу for в котором i увеличивается на 1. И так проверяется до конца.
